# raiden-rs

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html
assets/: sw.js
assets/shaders/: default_shader.wgsl  vert_shader.wgsl
examples/: main.rs
src/: camera.rs  commands.rs  frag_shader.wgsl  lib.rs  main.rs  mesh.rs  outline_frag_shader.wgsl  primitives.rs  renderer.rs  sdl3_integration.rs  winit_integration.rs
